...
                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image plug" translatesAutoresizingMaskIntoConstraints="NO" id="elg-k9-IWq">
                                                    <rect key="frame" x="0.0" y="0.0" width="361" height="179"/>
                                                    <color key="backgroundColor" name="YP Grey"/>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="afL-TD-qgq">
                                                    <rect key="frame" x="319" y="0.0" width="42" height="42"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="likeButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="42" id="4xO-NZ-jJc"/>
                                                        <constraint firstAttribute="height" constant="42" id="P2K-Dk-GU8"/>
                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="42" id="mj0-jn-TFY"/>
                                                        <constraint firstAttribute="width" constant="42" id="rUX-LN-P5C"/>
                                                    </constraints>
...
                                <connections>
                                    <outlet property="delegate" destination="ego-Nt-OiM" id="6ut-se-JEa"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rZs-Bc-szY">
                                <rect key="frame" x="10" y="55" width="48" height="38"/>
                                <accessibility key="accessibilityConfiguration" identifier="navBackButton"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" image="Backward"/>
                                <connections>
                                    <action selector="clickBackButton:" destination="ego-Nt-OiM" eventType="touchUpInside" id="zba-eG-JYY"/>
                                </connections>
                            </button>
...
                                    <constraint firstAttribute="width" constant="60" id="zGB-Oe-1sF"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="44v-8z-lkX">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="Iyx-No-7am"/>
                                </constraints>
                                <color key="tintColor" name="YP Black"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти"/>
...
                                <color key="backgroundColor" name="YP White"/>
                                <wkWebViewConfiguration key="configuration">
                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                    <wkPreferences key="preferences"/>
                                </wkWebViewConfiguration>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="UnsplashWebView"/>
                                </userDefinedRuntimeAttributes>
                            </wkWebView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ikw-vX-w7f">
                                <rect key="frame" x="9" y="68" width="24" height="24"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="nav_back_button"/>
...
